Fixed spacing

--- a/style/about.css
+++ b/style/about.css
@@ -103,7 +103,9 @@
     }
 
     .main-description h2{
-        display: none; 
+        margin-top: 2.5rem;
+        margin-bottom: 0rem;
+        color: var(--black);
     }
 
     .container-devs{
